[package]
name = "flute"
version = "1.0.3"
authors = ["Yannick Poirier <contact@yannickpoirier.fr>"]
edition = "2021"
license = "MIT"
description = "File Delivery over Unidirectional Transport (FLUTE)"
homepage = "https://github.com/ypo/flute"
repository = "https://github.com/ypo/flute"
keywords = ["multicast", "network", "broadcast", "5g", "satellite"]
categories = ["network-programming", "encoding", "aerospace::space-protocols"]
rust-version = "1.66"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "flute"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
log  = "0.4"
chrono = "0.4.23"
serde = { version = "1.0", features = ["derive"] }
quick-xml = { version = "0.28.1", features = ["serialize"] }
base64 = "0.21"
url = "2.3.1"
num-integer = "0.1"
reed-solomon-erasure = "6.0"
flate2 = "1.0"
md5 = "0.7"
pyo3 = { version = "0.19", features = ["extension-module"], optional = true }
pyo3-log = { version = "0.8", optional = true }
raptorq = "1.7"
raptor-code = "1.0.5"
rand = "0.8"

[dev-dependencies]
env_logger = "0.10.0"

[features]
python = ["pyo3", "pyo3-log"]

