[package]
name = "flute"
version = "1.10.3"
authors = ["Yannick Poirier <contact@yannickpoirier.fr>"]
edition = "2021"
license = "MIT"
description = "File Delivery over Unidirectional Transport (FLUTE)"
homepage = "https://github.com/ypo/flute"
repository = "https://github.com/ypo/flute"
keywords = ["multicast", "network", "broadcast", "5g", "satellite"]
categories = ["network-programming", "encoding", "aerospace::space-protocols"]
rust-version = "1.66"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "flute"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
log  = "0.4"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
quick-xml = { version = "0.38", features = ["serialize"] }
base64 = "0.22"
url = "2.5"
num-integer = "0.1"
reed-solomon-erasure = "6.0"
flate2 = "1.0"
md5 = "0.7"
pyo3 = { version = "0.25", features = ["extension-module"], optional = true }
pyo3-log = { version = "0.12", optional = true }
raptorq = "2.0"
raptor-code = "1.0"
opentelemetry = { version = "0.30", optional = true  }
opentelemetry-semantic-conventions = { version = "0.30" , optional = true }
rand = "0.9"
utoipa = { version = "5", optional = true }

[dev-dependencies]
env_logger = "0.11"
tempfile = "3.10.1"

[features]
python = ["pyo3", "pyo3-log"]
optel = ["opentelemetry", "opentelemetry-semantic-conventions"]
openapi = ["utoipa"]
