[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "flute-alc"
requires-python = ">=3.7"
dynamic = ["version"]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Rust"
]

[tool.maturin]
compatibility = "manylinux2014"
features = ["python"]

