[package]
name = "flute-receiver"
version = "1.0.0"
edition = "2021"
description = "FLUTE Receiver example"
keywords = ["multicast", "network", "broadcast", "5g", "satellite"]
categories = ["network-programming", "encoding", "aerospace::space-protocols"]

[dependencies]
log  = "0.4"
flute = { path = "../.." }
env_logger = "0.11"
url = "2.5.0"
libc = "0.2"
pnet = "0.34"